--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voodotest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "public/index.js",
   "scripts": {
     "watch": "postcss ./src/css/tailwind.css -o ./public/output.css --watch"
   },
