--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "public/index.js",
   "scripts": {
-    "watch": "postcss ./src/css/tailwind.css -o ./public/output.css --watch"
+    "watch": "postcss ./src/css/tailwind.css -o ./output.css --watch"
   },
   "keywords": [],
   "author": "",
